yaml/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-server
  template:
    metadata:
      labels:
        app: jenkins-server
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 50000
          volumeMounts:
            - mountPath: "/var/jenkins_home"
              name: jenkins-pv
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 0
      volumes:
        - name: jenkins-pv
          persistentVolumeClaim:
            claimName: jenkins-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: default
spec:
  selector:
    app: jenkins-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
