yaml/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - backend:
            service:
              name: jenkins-service
              port:
                number: 80
          path: /jenkins
          pathType: Prefix

        - backend:
            service:
              name: hello-world-war
              port:
                number: 80
          path: '/hello-world-war-1.0.0'
          pathType: Prefix

        - backend:
            service:
              name: nexus-service
              port:
                number: 80
          path: /
          pathType: Prefix

        - backend:
            service:
              name: nexus-service
              port:
                number: 8811
          path: /
          pathType: Prefix
